--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port = 3050
+server.port = ${PORT:3050}
+
+spring.datasource.url = ${DATABASE_URL:jdbc:postgresql://localhost:5432/blendocu}
+spring.datasource.username = ${DATABASE_LOGIN:blendocu}
+spring.datasource.password = ${DATABASE_PASSWORD:blend}
