--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <version>5.0.0.RC4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
