--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ addons:
 services:
 - postgresql
 before_script:
-  - psql -c "create user chapay with password '4rfgt5';" -U postgres
-  - psql -c "create database gamedb;" -U postgres
-  - psql -c "grant all on database gamedb to chapay;" -U postgres
+  - psql -c "create user blendocu with password 'blend';" -U postgres
+  - psql -c "create database blendocu;" -U postgres
+  - psql -c "grant all on database blendocu to blendocu;" -U postgres
