--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.mail.park</groupId>
-    <artifactId>sample-1-2</artifactId>
+    <artifactId>Blendocu_back</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RC2</version>
+        <version>2.0.1.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -45,6 +45,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
