--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port = ${PORT:3050}
 
 spring.datasource.url = ${JDBC_DATABASE_URL}
+spring.datasource.username = ${JDBC_DATABASE_USERNAME}
+spring.datasource.password = ${JDBC_DATABASE_PASSWORD}
