testing DB on heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port = ${PORT:3050}
 
-spring.datasource.url = ${JDBC_DATABASE_URL}
+spring.datasource.url = ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/blendocu}
+spring.datasource.username = ${JDBC_DATABASE_USERNAME:blendocu}
+spring.datasource.password = ${JDBC_DATABASE_PASSWORD:blend}
