--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
 jdk:
 - oraclejdk9
+services:
+  - postgresql
+before_script:
+  - psql -c "create user blendocu with password 'blend';" -U postgres
+  - psql -c "create database blendocu;" -U postgres
+  - psql -c "grant all on database blendocu to blendocu;" -U postgres
