--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -3,3 +3,5 @@
 ORIGINS=http://127.0.0.1:3000,http://localhost:3000,https://blend-front.herokuapp.com,https://blendocu.herokuapp.com, http://blendocu.herokuapp.com
 ALLOW_CREDENTIALS=true
 FILES_DIR = files/
+MULTIPLAYER_MAPS_DIR = files/multiplayer_maps/
+MULTIPLAYER_MAPS_COUNT = 1
