--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,6 +1,6 @@
 # PerpetuumMobile Properties
 
-ORIGINS=http://127.0.0.1:3000,http://localhost:3000,https://blend-front.herokuapp.com,https://blendocu.herokuapp.com, http://blendocu.herokuapp.com
+ORIGINS=http://127.0.0.1:3000,http://localhost:3000,https://blend-front.herokuapp.com,https://blendocu.herokuapp.com, http://blendocu.herokuapp.com, https://blendocu.com, http://blendocu.com, https://blendocu.me, http://blendocu.me
 ALLOW_CREDENTIALS=true
 FILES_DIR = files/
 MULTIPLAYER_MAPS_DIR = files/multiplayer_maps/
