fix bug with password saving + add saving multiplayer result in DB

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -5,3 +5,6 @@ ALLOW_CREDENTIALS=true
 FILES_DIR = files/
 MULTIPLAYER_MAPS_DIR = files/multiplayer_maps/
 MULTIPLAYER_MAPS_COUNT = 1
+SCORE_WIN = 10
+SCORE_LOSE = -10
+SCORE_DRAW =
