add multithreading in game mechanic add map for multiplayer

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -4,7 +4,7 @@ ORIGINS=http://127.0.0.1:3000,http://localhost:3000,https://blend-front.herokuap
 ALLOW_CREDENTIALS=true
 FILES_DIR = files/
 MULTIPLAYER_MAPS_DIR = files/multiplayer_maps/
-MULTIPLAYER_MAPS_COUNT = 1
+MULTIPLAYER_MAPS_COUNT = 2
 SCORE_WIN = 10
 SCORE_LOSE = -10
-SCORE_DRAW =
+SCORE_DRAW = 5
