--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,14 @@ server.port = ${PORT:3050}
 spring.datasource.url = ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/blendocu}
 spring.datasource.username = ${JDBC_DATABASE_USERNAME:blendocu}
 spring.datasource.password = ${JDBC_DATABASE_PASSWORD:blend}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=1000
+spring.mail.properties.mail.smtp.timeout=1000
+spring.mail.properties.mail.smtp.writetimeout=1000
