change mail service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.url = ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/ble
 spring.datasource.username = ${JDBC_DATABASE_USERNAME:blendocu}
 spring.datasource.password = ${JDBC_DATABASE_PASSWORD:blend}
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=smtp.yandex.ru
+spring.mail.port=465
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -14,3 +14,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=1000
 spring.mail.properties.mail.smtp.timeout=1000
 spring.mail.properties.mail.smtp.writetimeout=1000
+spring.mail.properties.mail.smtp.ssl=true
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.port=465
