+ sending emails via mail.ru

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.url = ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/ble
 spring.datasource.username = ${JDBC_DATABASE_USERNAME:blendocu}
 spring.datasource.password = ${JDBC_DATABASE_PASSWORD:blend}
 
-spring.mail.host=smtp.yandex.ru
-spring.mail.port=465
+spring.mail.host=smtp.mail.ru
+spring.mail.port=2525
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -16,4 +16,4 @@ spring.mail.properties.mail.smtp.timeout=1000
 spring.mail.properties.mail.smtp.writetimeout=1000
 spring.mail.properties.mail.smtp.ssl=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.port=2525
