--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=1000
-spring.mail.properties.mail.smtp.timeout=1000
-spring.mail.properties.mail.smtp.writetimeout=1000
+spring.mail.properties.mail.smtp.connectiontimeout=2000
+spring.mail.properties.mail.smtp.timeout=2000
+spring.mail.properties.mail.smtp.writetimeout=2000
+spring.mail.properties.mail.smtp.ssl=true
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.port=2525
